[package]
name = "cu-chulainn"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/euxaristia/cu-chulainn"

[lib]
name = "cu_chulainn"
path = "src/lib.rs"

[[bin]]
name = "cu-chulainn"
path = "src/main.rs"

[dependencies]
zeroize = { version = "1", features = ["zeroize_derive"] }
ctrlc = "3"

