[package]
name = "html-server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

[dependencies.html-server]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_path_normalization"
path = "fuzz_targets/fuzz_path_normalization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_request_parsing"
path = "fuzz_targets/fuzz_request_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_url_decode"
path = "fuzz_targets/fuzz_url_decode.rs"
test = false
doc = false
bench = false
